fix: adjust field-icon visibility

--- a/bootstrap_select/static/bootstrap_select/bootstrap_select.css
+++ b/bootstrap_select/static/bootstrap_select/bootstrap_select.css
@@ -5,3 +5,12 @@
 .form-row {
   overflow: visible;
 }
+
+.form-row.field-icon {
+  overflow: hidden;
+}
+
+.bootstrap-select .dropdown-menu {
+  height: 500px;
+  width: 500px;
+}
